# slm-python-buddy

./: .env.example  .gitignore  README.md  pyproject.toml  train.py
data/: data.json  preprocess.py  python-code-instruction-dataset-kaggle-devastator.json
pybuddy/: chat.py  inference.py  main.py  metrics.py  optimization.py  settings.py  train.py  training.py  utils.py
scripts/: download_pretrained_model.py  infer_pretrained.py  infer_pretrained_model.py  upload_to_hf.py
src/: download-model.py  utils.py
